--- a/inductive-python/03_loops.ipynb
+++ b/inductive-python/03_loops.ipynb
@@ -41,7 +41,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -51,24 +51,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -120,7 +108,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -192,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -207,7 +195,7 @@
     "collapsed": false,
     "scrolled": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -235,7 +223,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -279,7 +267,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -331,7 +319,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
