--- a/inductive-python/04_lists.ipynb
+++ b/inductive-python/04_lists.ipynb
@@ -40,8 +40,7 @@
     "### Indexing\n",
     "\n",
     "\n",
-    "#### Predict\n",
-    "What will the following code do?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -51,7 +50,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -69,24 +68,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will the following code do?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -104,24 +91,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will the following code do?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -171,8 +146,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will the following code do?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -181,7 +155,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -191,24 +165,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will the following code do?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -258,8 +220,7 @@
    "source": [
     "### Setting values in lists\n",
     "\n",
-    "#### Predict\n",
-    "What will the following code do?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -268,7 +229,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -294,8 +255,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will the following code do?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -304,7 +264,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -331,8 +291,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will the following code do?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -341,7 +300,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -360,24 +319,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will the following code do?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -393,18 +340,6 @@
     "some_list = [10,20,30]\n",
     "some_list.pop(1)\n",
     "print(some_list)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will the following code do?"
    ]
   },
   {
@@ -523,7 +458,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -592,8 +527,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will the following print?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -602,7 +536,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -633,8 +567,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will the following print?"
+    "#### Predict what this code does."
    ]
   },
   {
@@ -644,7 +577,7 @@
     "collapsed": false,
     "scrolled": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
