--- a/inductive-python/06_numpy_arrays.ipynb
+++ b/inductive-python/06_numpy_arrays.ipynb
@@ -4,7 +4,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy Arrays"
+    "# Numpy Arrays\n",
+    "\n",
+    "`numpy` arrays are fast... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### numpy arrays are fast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 75.1 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "big_list = list(range(10000000))\n",
+    "%timeit sum(big_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 6.62 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "big_array = np.array(range(10000000))\n",
+    "%timeit np.sum(big_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Compare and contrast these two results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[ 5 10 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_array = np.array([1,2,3])\n",
+    "print(some_array)\n",
+    "print(5*some_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_list = [1,2,3]\n",
+    "print(some_list)\n",
+    "print(5*some_list)"
    ]
   },
   {
@@ -15,11 +138,227 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "you can do math across arrays"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Numpy math "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "a float is required",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d6c153c2bc2b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: a float is required"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.sin(some_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.84147098,  0.90929743,  0.14112001])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sin(some_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2 3 4 5]\n",
+      "[1 2 3]\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "some_array = np.array([1,2,3,4,5])\n",
+    "print(some_array[0])\n",
+    "print(some_array[1:])\n",
+    "print(some_array[:-2])\n",
+    "print(some_array[:])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "you can make multi-dimensional arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.]]\n",
+      "\n",
+      "[[ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.  1.]]\n",
+      "\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.zeros((3,5)))\n",
+    "print(\"\")\n",
+    "print(np.ones((3,5)))\n",
+    "print(\"\")\n",
+    "print(np.array([[0,1,2],[3,4,5],[6,7,8]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "You can slice multi-dimensonal arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "\n",
+      "[1 2 3]\n",
+      "\n",
+      "[4 5 6]\n",
+      "\n",
+      "1\n",
+      "\n",
+      "[1 2 3]\n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "some_array = np.array([[1,2,3],[4,5,6]])\n",
+    "print(some_array)\n",
+    "print(\"\")\n",
+    "print(some_array[0])\n",
+    "print(\"\")\n",
+    "print(some_array[1])\n",
+    "print(\"\")\n",
+    "print(some_array[0,0])\n",
+    "print(\"\")\n",
+    "print(some_array[0,:])\n",
+    "print(\"\")\n",
+    "print(some_array[:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
