--- a/inductive-python/table-of-contents.ipynb
+++ b/inductive-python/table-of-contents.ipynb
@@ -53,9 +53,9 @@
     "+ [Lists](04_lists.ipynb)\n",
     "+ [Tuples and dicts and strings](05_tuples-and-dicts-and-strings.ipynb)\n",
     "+ [numpy arrays](06_numpy_arrays.ipynb)\n",
-    "+ [functions](09_functions.ipynb)\n",
-    "+ [namespace](10_namespace.ipynb)\n",
-    "+ [plotting with matplotlib](11_plotting.ipynb)"
+    "+ [functions](07_functions.ipynb)\n",
+    "+ [namespace](08_namespace.ipynb)\n",
+    "+ [plotting with matplotlib](09_plotting.ipynb)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "### References\n",
     "+ [Jupyter reference](jupyter_reference.ipynb)\n",
-    "+ [Graphing reference](matplotlib_reference.ipynb)\n",
+    "+ [Graphing reference](09_plotting.ipynb)\n",
     "+ [Python cheatsheet](../docs/build/cheat-sheet.html)"
    ]
   },
