--- a/practicum/01_starting/homework-1.ipynb
+++ b/practicum/01_starting/homework-1.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "+ Write a line of code that stores the value of the $atan(5)$ in the variable `y`."
    ]
   },
@@ -109,22 +102,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Write a loop that calculates a Riemann sum for $x^2$ for $x \\in [-5,5]$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "+ Write a loop that prints every 5th number between 1 and 2000."
    ]
   },
@@ -159,6 +136,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "+ Write a loop that calculates a Riemann sum for $x^2$ for $x \\in [-5,5]$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "+ Create a list of all integers between 2 and 30."
    ]
   },
@@ -175,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Create a list of all `sin(x)` for `x` $\\in$ [$0$, $\\pi/4$, $\\pi /2$, $3 \\pi /4$... $2 \\pi$]."
+    "+ Create a list called **some_list** that has all `sin(x)` for `x` $\\in$ [$0$, $\\pi/4$, $\\pi /2$, $3 \\pi /4$... $2 \\pi$]."
    ]
   },
   {
@@ -199,6 +192,72 @@
     "\n",
     "[100,-99,98,-97,96,...,0]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ Write a loop that creates a dictionary that uses the letters A-E as keys to the values 0-4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ XX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "You measure the doubling times of bacterial strains A-D under identical conditions.  \n",
+    "\n",
+    "| strain | doubling time (min) | \n",
+    "|--------|---------------------|\n",
+    "|  A     | 20                  |\n",
+    "|  B     | 25                  |\n",
+    "|  C     | 39                  |\n",
+    "|  D     | 53                  |\n",
+    "\n",
+    "Assuming you start with a single cell and have nutrients in excess, you can calculate the number of bacteria $N(t)$ in a culture after $t$ minutes according to: \n",
+    "\n",
+    " $$N(t) = 2^{t/d}$$\n",
+    "\n",
+    "\n",
+    "\n",
+    " + Create a dictionary called **doubling** that keys the name of each strain to its population after 12 hours.\n",
+    " + Use `matplotlib` to create a single graph that shows $N(t)$ for all four bacterial strains from 0 to 18 hr.  Make sure you label your axes appropriately. "
    ]
   },
   {
