--- a/inductive-python/table-of-contents.ipynb
+++ b/inductive-python/table-of-contents.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### Approach:\n",
     "\n",
-    "For each new idea, these exercises follow a defined approach:\n",
+    "For each new idea, these exercises (mostly) follow a defined approach:\n",
     "\n",
     "+ **Predict** (look at code, predict what it does, test the prediction)\n",
     "+ **Summarize** (summarize what the code does)\n",
@@ -53,9 +53,9 @@
     "+ [Lists](04_lists.ipynb)\n",
     "+ [Tuples and dicts and strings](05_tuples-and-dicts-and-strings.ipynb)\n",
     "+ [numpy arrays](06_numpy_arrays.ipynb)\n",
-    "+ [functions](07_functions.ipynb)\n",
-    "+ [namespace](08_namespace.ipynb)\n",
-    "+ [plotting with matplotlib](09_plotting.ipynb)"
+    "+ [Functions](07_functions.ipynb)\n",
+    "+ [Namespace](08_namespace.ipynb)\n",
+    "+ [Plotting with matplotlib](09_plotting.ipynb)"
    ]
   },
   {
