--- a/inductive-python/00_jupyter-intro.ipynb
+++ b/inductive-python/00_jupyter-intro.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "# THIS IS A CODE CELL\n",
     "\n",
@@ -16,8 +24,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## THIS IS A MARKDOWN CELL"
+    "# THIS IS A MARKDOWN CELL"
    ]
   },
   {
