--- a/inductive-python/03_loops.ipynb
+++ b/inductive-python/03_loops.ipynb
@@ -560,7 +560,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Summary\n",
     "\n",
