--- a/inductive-python/06_numpy_arrays.ipynb
+++ b/inductive-python/06_numpy_arrays.ipynb
@@ -22,7 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -34,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 75.1 ms per loop\n"
+      "10 loops, best of 3: 85.4 ms per loop\n"
      ]
     }
    ],
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -57,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 6.62 ms per loop\n"
+      "100 loops, best of 3: 7.17 ms per loop\n"
      ]
     }
    ],
